frontend-apache-template.yaml
apiVersion: v1
kind: Template
labels:
  template: frontend-backend-ssl
metadata:
  annotations:
    description: Template for deploying Apache and Postgres on RHEL
    iconClass: icon-postgres-database
    tags: quickstart,oracle
  name: frontend-backend-ssl
objects:
- apiVersion: v1
  kind: ImageStream
  metadata:
    name: rhel7
  spec:
    tags:
    - from:
        kind: DockerImage
        name: registry.access.redhat.com/rhel7
      name: latest
      importPolicy:
        scheduled: true

- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
    name: ${NAME}-frontend-web
  spec:
    ports:
    - name: web
      port: 8080
      targetPort: 8080
    selector:
      name: ${NAME}-frontend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
    name: ${NAME}-frontend-ssl
  spec:
    ports:
    - name: ssl
      port: 8443
      targetPort: 8443
    selector:
      name: ${NAME}-frontend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    name: ${NAME}-frontend-web
  spec:
    host: ${APPLICATION_DOMAIN}
    port:
      targetPort: 8080
    to:
      kind: Service
      name: ${NAME}-frontend-web
- apiVersion: v1
  kind: Route
  metadata:
    name: ${NAME}-frontend-ssl
  spec:
    host: ${APPLICATION_DOMAIN}
    port:
      targetPort: 8443
    to:
      kind: Service
      name: ${NAME}-frontend-ssl
    tls:
      termination: reencrypt
      insecureEdgeTerminationPolicy: None
      destinationCACertificate: |-
        [...]
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      description: Keeps track of changes in the application image
    name: ${NAME}-frontend
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      description: Defines how to build the application
    name: ${NAME}-frontend
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: ${NAME}-frontend:latest
    source:
      contextDir: ${CONTEXT_DIR}
      git:
        ref: ${SOURCE_REPOSITORY_REF}
        uri: ${SOURCE_REPOSITORY_URL}
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: rhel7:latest
      type: Source
    triggers:
    - type: ImageChange
    - type: ConfigChange
    - github:
        secret: ${GITHUB_WEBHOOK_SECRET}
      type: GitHub
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the application server
    name: ${NAME}-frontend
  spec:
    replicas: 1
    selector:
      name: ${NAME}-frontend
    strategy:
      type: Rolling
    template:
      metadata:
        labels:
          name: ${NAME}-frontend
        name: ${NAME}-frontend
      spec:
        containers:
        - env:
          - name: SERVICE_NAME
            value: ${SERVICE_NAME}-frontend
          image: ${NAME}-frontend
          imagePullPolicy: IfNotPresent
          name: frontend
          ports:
          - containerPort: 8080
            name: web
          resources:
            limits:
              memory: ${MEMORY_LIMIT}
          volumeMounts:
          - mountPath: /etc/pki/tls/certs
            name: apache-cert
          - mountPath: /etc/pki/tls/private
            name: apache-key
          - mountPath: /tmp/certs
            name: postgres-client-certs   
        volumes:
        - name: apache-cert
          configMap:
            defaultMode: 420
            name: apache-cert
        - name: apache-key
          configMap:
            defaultMode: 400
            name: apache-key
        - name: postgres-client-certs
          configMap:
            defaultMode: 0777
            name: postgres-client-certs            
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - frontend
        from:
          kind: ImageStreamTag
          name: ${NAME}-frontend:latest
        lastTriggeredImage: ""
      type: ImageChange
    - type: ConfigChange
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: apache-cert
  data:
    frontend.cert: |
      [...]
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: apache-key
  data:
    frontend.key: |
      [...]
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: postgres-client-certs
  data:
    postgresql.crt: |-
      -----BEGIN CERTIFICATE-----
      MIIDMTCCAhkCAQEwDQYJKoZIhvcNAQELBQAwcTELMAkGA1UEBhMCQ0ExCzAJBgNV
[...]
      bvzpiLg=
      -----END CERTIFICATE-----
    postgresql.key: |-
      [...]
    root.crt: |-
      -----BEGIN CERTIFICATE-----
      MIIDVjCCAj4CAQEwDQYJKoZIhvcNAQELBQAwcTELMAkGA1UEBhMCQ0ExCzAJBgNV
[...]
      4G+8U8fkpCI+i+ldtMpVZbQKhyJDQsHKJ8eQNxrO4ijGWHGCXBNagEaD
      -----END CERTIFICATE-----
parameters:
- description: The name assigned to all of the frontend objects defined in this template.
  displayName: Name
  name: NAME
  value: ssl
- description: Maximum amount of memory the container can use.
  displayName: Memory Limit
  name: MEMORY_LIMIT
  value: 1024Mi
- description: The exposed hostname that will route to the Application service, if
    left blank a value will be defaulted.
  displayName: Application Hostname
  name: APPLICATION_DOMAIN
- description: The URL of the repository with your application source code.
  displayName: Git Repository URL
  name: SOURCE_REPOSITORY_URL
  value: https://github.com/shah-zobair/frontend-backend-ssl.git
- description: Set this to a branch name, tag or other ref of your repository if you
    are not using the default branch.
  displayName: Git Reference
  name: SOURCE_REPOSITORY_REF
- description: Set this to the relative path to your project if it is not in the root
    of your repository.
  displayName: Context Directory
  name: CONTEXT_DIR
  value: apache
- description: A secret string used to configure the GitHub webhook.
  displayName: GitHub Webhook Secret
  from: '[a-zA-Z0-9]{40}'
  generate: expression
  name: GITHUB_WEBHOOK_SECRET
