ing-apache.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #route.openshift.io/termination: "passthrough"
    #route.openshift.io/termination: "edge"
    route.openshift.io/termination: "reencrypt"
  labels:
    app: apache
  name: apache
spec:
  rules:
  - host: apache.eoc-cbu.apps.ocp-dev.example.com
    http:
      paths:
      - backend:
          service:
            name: apache
            port:
              number: 8443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - apache
    secretName: apache-cert
